# ALLCools

./: .buildinfo  .bumpversion.cfg  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  MANIFEST.in  README.md  allcools_environment.yaml  content.html  environment.yaml  environment.yml  genindex.html  intro.html  markdown.html  notebooks.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py
.github/workflows/: build.yaml  publish.yaml  test.yaml
ALLCools/: __init__.py  __main__.py  _aggregate_region_count.py  _allc_to_bigwig.py  _allc_to_bigwig_new.py  _allc_to_region_count.py  _bam_to_allc.py  _doc.py  _doc_.py  _extract_allc.py  _mcad_io.py  _merge_allc.py  _open.py  allc_to_bigwig.py  allc_to_region_count.py  api.py  bam_to_allc.py  extract_allc.py  h5ad.py  merge_allc.py  table_to_allc.py  utilities.py
ALLCools/abc/: __init__.py  abc_score.py
ALLCools/clustering/: ClusterMerging.py  ConsensusClustering.py  __init__.py  art_of_tsne.py  balanced_knn.py  balanced_pca.py  chromatin_conformation.py  dmg.py  feature_enrichment.py  incremental_pca.py  integration.py  lsi.py  (+8 more)
_modules/: ALLCools.html  index.html
_sources/: intro.md
api/: intro.html
cluster_level/: intro.html
command_line/: allcools.html  allcools_allc.html  allcools_bw.html  allcools_dataset.html  allcools_extract.html  allcools_mcad.html  allcools_mcds.html  allcools_merge.html  allcools_profile.html  allcools_region.html  allcools_standard.html  allcools_table_to_allc.html  allcools_tbi.html  cli_intro.html
discuss/: dmr_benchmark.html  intro.html
doc/: CONTRIBUTING.md
docs/: CONDUCT.md  CONTRIBUTING.md  README.md
project_info/: citation.html
start/: analysis_steps.html  cell_level_analysis.html  cluster_level_analysis.html  input_files.html  installation.html  interactive.html  intro.html  prepare_input.html
test/: test_allc_to_region_count.py  test_bam_to_allc.py  test_extract_allc.py  utilities.py
tests/: test_allc_to_region_count.py  test_bam_to_allc.py  test_basics.py  test_extract_allc.py  utilities.py
visualization/: intro.html
(+823 files in other folders)
